# quantum-gates

./: .env.template  .gitignore  .pylintrc  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
configuration/: token.py  token_template.py
docs/: requirements.txt
docs/source/: backends.rst  circuits.rst  conf.py  factories.rst  gates.rst  index.rst  integrators.rst  legacy.rst  pulses.rst  quantum_algorithms.rst  simulators.rst  utilities.rst
docs/tutorials/: device_parameters_demo.py  qiskit_demo.ipynb  simulation_demo.py  simulation_demo_configuration.json
docs/tutorials/notebooks/: 01try_ECR.ipynb  02try_factory.ipynb  05write_device_parameters.ipynb  tutorial_qiskit_NoisyGatesProvider.ipynb  tutorial_quantum_gates.ipynb
docs/tutorials/outputs/: README.txt
src/: 01try.ipynb  01try_ECR.ipynb  02try_factory.ipynb  03try_circuit.ipynb  04try_device.ipynb  05write_device_parameters.ipynb  device_parameters.json
src/quantum_gates/: __init__.py  backends.py  circuits.py  factories.py  gates.py  integrators.py  metrics.py  programs.py  pulses.py  qiskit_provider.py  quantum_algorithms.py  simulators.py  utilities.py
src/quantum_gates/_gates/: factories.py  gates.py  integrator.py  pulse.py
src/quantum_gates/_legacy/: __init__.py  circuit.py  gates.py  simulator.py
src/quantum_gates/_programs/: Surface_Code.py
src/quantum_gates/_qiskit_provider/: ng_backend.py  ng_job.py  ng_provider.py
src/quantum_gates/_simulation/: backend.py  circuit.py  simulator.py
src/quantum_gates/_utility/: circ_optimizator.py  circ_optimizer.py  device_parameters.py  quantum_algorithms.py  rotated_surface_code.py  simulations_utility.py  surface_code.py
start up and testing/: AER_testing_statevector.ipynb  AER_testing_surface_code_SV.ipynb  Simulator_SC_vs_AER.ipynb  device_parameters.json  global library fake backend.ipynb  global_library_backend_test.ipynb  local_backend_test.ipynb  local_fake_backend_test copy.ipynb  local_fake_backend_test.ipynb  local_fake_backend_test_no_noise.ipynb  noiseless_testing_local_library working test .ipynb  noiseless_testing_local_library working test copy.ipynb  testing_global_library.ipynb  testing_local_library working test.ipynb  testing_local_library_reset.ipynb  testing_local_library_surfacecode.ipynb
start_up_and_testing/: testing_global_library.ipynb  testing_local_library working test.ipynb  testing_local_library_reset.ipynb  testing_local_library_rotated_surfacecode.ipynb  testing_local_library_surfacecode.ipynb
tests/: test_preprocess_circuit.py
tests/gates/: test_gates.py  test_integrator.py  test_pulse.py
tests/helpers/: device_parameters.py  functions.py  gates.py
tests/qiskit_provider/: test_ng_provider.py
tests/simulation/: test_anderson_simulator.py  test_backend.py  test_circuit.py
tests/utility/: test_device_parameters.py  test_opt_algo.py  test_simulation_utility.py
(+59 files in other folders)
