[metadata]
name = quantum-gates
version = 0.1.0
author = M. Grossi, G. D. Bartolomeo, M. Vischi, R. Wixinger
author_email = michele.grossi@cern.ch, dibartolomeo.giov@gmail.com, vischimichele@gmail.com, roman.wixinger@gmail.com
description = Quantum Noisy Gates Simulation with Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/CERN-IT-INNOVATION/quantum-gates/tree/dev
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir =
    = src
packages=find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    qiskit>=0.39.2
    scipy
    matplotlib
    pylatexenc
    opt-einsum

[options.packages.find]
where = src

[options.extras_require]
demo =
    jupyter
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
