[metadata]
name = quantum-gates
version = 2.2.0
author = M. Grossi, G. D. Bartolomeo, M. Vischi, P. Da Rold, R. Wixinger
author_email = michele.grossi@cern.ch, dibartolomeo.giov@gmail.com, vischimichele@gmail.com, PAOLO.DAROLD@studenti.units.it, roman.wixinger@gmail.com
description = Quantum Noisy Gates Simulation with Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/CERN-IT-INNOVATION/quantum-gates/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir =
    = src
packages=find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    qiskit-aer>=0.17.0
    qiskit>=2.0
    qiskit-ibm-runtime>=0.39.0
    scipy
    matplotlib
    pylatexenc
    opt-einsum
    pytest
    pylint
    python-dotenv
    build

[options.packages.find]
where = src

[options.extras_require]
demo =
    jupyter
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
    sphinx-autoapi>=2.0.1
